# amsynth

./: .amSynth.presets  .amSynthrc  .cdtproject  .gitignore  .gitmodules  .project  .travis.yml  AUTHORS  CHANGELOG.md  CMakeLists.txt  CONTRIBUTING.md  ChangeLog  INSTALL  InstallOscPack  Makefile.am  Makefile.in  MarkVersion.pl  NEWS  README  README.md  TODO  acconfig.h  acinclude.m4  aclocal.m4  amSynth.dsc  amSynth.pws  amSynth.spec  amsynth-Info.plist  amsynth.desktop.in  amsynth.sln  amsynth.vcproj  amsynth.vcxproj  amsynth.vcxproj.filters  autogen.sh  bootstrap  build-deb  clean_tree  common.am  config.h.in  configure  (+15 more)
.github/: ISSUE_TEMPLATE.md
CVS/: Entries  Entries.Extra  Repository
amjson.xcodeproj/: project.pbxproj
amsynth.lv2/: BriansBank01.amSynth.bank.ttl  BriansBank02.amSynth.bank.ttl  BriansBank03.amSynth.bank.ttl  BriansBank04.amSynth.bank.ttl  BriansBank05.amSynth.bank.ttl  BriansBank06.amSynth.bank.ttl  BriansBank07.amSynth.bank.ttl  BriansBank08.amSynth.bank.ttl  BriansBank09.amSynth.bank.ttl  BriansBank1.amSynth.bank.ttl  BriansBank10.amSynth.bank.ttl  BriansBank11.amSynth.bank.ttl  BriansBank12.amSynth.bank.ttl  BriansBank13.amSynth.bank.ttl  (+42 more)
skins/default/: Makefile  Makefile.am  background.xcf  keybmode.xcf  knob_osc_octave.knob  layout.ini
src/: AudioOutput.cc  AudioOutput.cpp  AudioOutput.h  Config.cc  Config.h  Configuration.cpp  Configuration.h  DebugMessage.C  DebugMessage.cpp  DebugMessage.h  EventController.h  JackOutput.cc  JackOutput.cpp  JackOutput.h  Makefile-dssi  Makefile.am  Makefile.in  Makefile.linux.vst  MidiController.cc  MidiController.cpp  MidiController.h  NsmClient.C  NsmClient.cpp  NsmClient.h  NsmHandler.C  NsmHandler.cpp  NsmHandler.h  PThread.h  Parameter.cc  Parameter.cpp  Parameter.h  Preset.cc  Preset.cpp  Preset.h  PresetController.cc  PresetController.cpp  PresetController.h  Synthesizer.cpp  Synthesizer.h  Thread.h  (+41 more)
src/CVS/: Entries  Entries.Extra  Repository
src/Effects/: Distortion.cc  Distortion.cpp  Distortion.h  Makefile.am  Reverb.cc  Reverb.h  SoftLimiter.cc  SoftLimiter.cpp  SoftLimiter.h  allpass.cpp  allpass.hpp  denormal_test.cpp  denormals.h  reverb_test.cpp  revmodel.cpp  revmodel.hpp  tuning.h
src/Effects/CVS/: Entries  Entries.Extra  Repository
src/GUI/: AboutDialog.cc  AboutDialog.h  ConfigDialog.cpp  ConfigDialog.h  ControlPanel.cpp  ControlPanel.h  ControllerMapDialog.cc  ControllerMapDialog.h  EditorPanel.cc  EditorPanel.h  GUI.cc  GUI.h  Knob.cc  Knob.h  MIDILearnDialog.cpp  MIDILearnDialog.h  MainMenu.cpp  MainMenu.h  MainWindow.cpp  MainWindow.h  Makefile.am  Makefile.in  NewGui.cpp  NewGui.h  ParameterKnob.cc  ParameterKnob.h  ParameterSwitch.cc  ParameterSwitch.h  ParameterView.cc  ParameterView.h  PrefixHeader.h  PresetControllerView.cc  PresetControllerView.cpp  PresetControllerView.h  RadioButtonParameterView.cc  RadioButtonParameterView.h  Request.h  SkButton.cpp  SkButton.h  amsynth_logo.h  (+26 more)
src/GUI/CVS/: Entries  Entries.Extra  Repository
src/VoiceBoard/: ADSR.cc  ADSR.cpp  ADSR.h  Adder.cc  Adder.h  AmpSection.cc  AmpSection.h  Amplifier.cc  Amplifier.h  Distortion.cc  Distortion.h  EnvelopeGenerator.cc  EnvelopeGenerator.h  FValue.cc  FValue.h  FilterControlSignal.cc  FilterControlSignal.h  FreqControlSignal.cc  FreqControlSignal.h  Limiter.cc  Limiter.h  LowPassFilter.cc  LowPassFilter.cpp  LowPassFilter.h  Makefile.am  Makefile.in  Mixer.cc  Mixer.h  Multiplier.cc  Multiplier.h  NFValue.cc  NFValue.h  Oscillator.cc  Oscillator.cpp  Oscillator.h  ProcessAndHold.cc  ProcessAndHold.h  Reverb.cc  Reverb.h  SoftLimiter.cc  (+11 more)
src/VoiceBoard/CVS/: Entries  Entries.Extra  Repository  Root
src/app/: AudioOutput.cpp  AudioOutput.h  CoreAudio.cpp  CoreAudio.h  JackOutput.cpp  main.cpp  main.h
src/app/drivers/: ALSAAudioDriver.h  ALSAMidiDriver.cpp  ALSAmmapAudioDriver.cpp  OSSAudioDriver.cpp  OSSMidiDriver.cpp
src/app/gui/: ConfigDialog.cpp  ConfigDialog.h  MIDILearnDialog.cpp  MIDILearnDialog.h  MainMenu.cpp  MainWindow.cpp  PresetControllerView.cpp  gui_main.cpp
src/app/nsm/: NsmClient.cpp  NsmHandler.cpp  NsmHandler.h
src/core/: Configuration.cpp  Configuration.h  controls.h  filesystem.cpp  midi.h
src/core/gui/: Button.h  Control.cpp  Control.h  ControlPanel.cpp  ControlPanel.h  Controls.cpp  Controls.h  JuceIntegration.cpp  JuceIntegration.h  Knob.cpp  Knob.h  LayoutDescription.h  MainComponent.cpp  MainComponent.h  Popup.h  juce_x11.cpp  juce_x11.h
src/core/synth/: ADSR.cpp  Distortion.cpp  Distortion.h  LowPassFilter.cpp  MidiController.cpp  MidiController.h  Parameter.cpp  Parameter.h  Preset.cpp  Preset.h  PresetController.cpp  PresetController.h  SoftLimiter.cpp  Synth--.h  Synthesizer.cpp  Synthesizer.h  TuningMap.cpp  TuningMap.h  UpdateListener.h  VoiceAllocationUnit.cpp  VoiceAllocationUnit.h  VoiceBoard.cpp
src/drivers/: ALSAAudioDriver.cc  ALSAAudioDriver.cpp  ALSAAudioDriver.h  ALSAMidiDriver.cc  ALSAMidiDriver.cpp  ALSAMidiDriver.h  ALSAmmapAudioDriver.cc  ALSAmmapAudioDriver.cpp  ALSAmmapAudioDriver.h  AudioDriver.h  AudioInterface.cc  AudioInterface.h  CoreAudio.cc  CoreAudio.cpp  CoreAudio.h  CoreMidiInterface.cc  CoreMidiInterface.h  Makefile.am  Makefile.in  MidiDriver.h  MidiInterface.cc  MidiInterface.h  OSSAudioDriver.cc  OSSAudioDriver.cpp  OSSAudioDriver.h  OSSMidiDriver.cc  OSSMidiDriver.cpp  OSSMidiDriver.h
src/drivers/CVS/: Entries  Entries.Extra  Repository
src/freeverb/: revmodel.cpp  revmodel.hpp  tuning.h
src/lv2/: amsynth.ttl  lv2.cpp  lv2_dump_ports.cpp  lv2_ui_gtk.c
src/lv2/lv2plug.in/ns/ext/atom/: forge.h  util.h
src/lv2/lv2plug.in/ns/ext/event/: event-helpers.h
src/lv2/lv2plug.in/ns/ext/log/: log.h
src/lv2/lv2plug.in/ns/ext/midi/: midi.h
src/lv2/lv2plug.in/ns/extensions/ui/: ui.h
src/nsm/: DebugMessage.cpp  NsmClient.cpp  NsmClient.h  NsmHandler.cpp  NsmHandler.h  nsm.h
src/plugins/dssi/: dssiplugin.cpp  dssiui.cpp
src/plugins/lv2/: lv2plugin.cpp  lv2plugin.h  lv2ui.cpp
src/plugins/vst2/: vstplugin.cpp
src/standalone/: main.cpp
src/standalone/drivers/: ALSAAudioDriver.cpp  ALSAmmapAudioDriver.cpp
(+149 files in other folders)
